--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
-title: Landing Page
-subTitle: A Template by Start Bootstrap
+title: Noclegi już od 25 PLN
+subTitle: +48 698-175-787 <br/> +48 698-614-862
+subTitle2: ul. Wyzwolenia 15 i 3 <br/> ul. Niepodległości 1 i 83
 ---
